dark mode icon fix

--- a/styles/_utility.scss
+++ b/styles/_utility.scss
@@ -740,7 +740,7 @@ img:not([src]){
 
 
   > button {
-    background-image: url(/images/darkmode.svg);
+    background-image: url(../images/darkmode.svg);
     background-repeat: no-repeat;
     background-size: 100% auto;
     width: 3rem;
